build: initialized JDK 21 build